Use Java 8 streams. Allow closing of FS cache.