@@ -4,15 +4,17 @@ import java.io.File;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Consumer;
+import java.util.function.Function;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 
 import org.jsoup.HttpStatusException;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
-
-import com.google.common.base.Function;
-import com.google.common.base.Functions;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
 
 public class RadaContentHelper {
 
@@ -78,6 +80,7 @@ public class RadaContentHelper {
 
 	protected static final ExtractAttr EXTRACT_ON_CLICK = new ExtractAttr("onclick");
 	protected static final ExtractAttr EXTRACT_HREF = new ExtractAttr("abs:href");
+	protected static final ExtractAttr EXTRACT_SRC = new ExtractAttr("src");
 	protected static final ExtractSplinter EXTRACT_SPLINTER_APOSTROPHE_1 = new ExtractSplinter("'", 1);
 	protected static final ExtractUrlParam EXTRACT_URLPARAM_nom_s = new ExtractUrlParam("nom_s=");
 	protected static final Function<String, String> FN_PREPEND_BASEURL = new FunctionStrFormat(RADA_BASE_URL + "%s");
@@ -126,52 +129,47 @@ public class RadaContentHelper {
 		return result;
 	}
 
-	public static FluentIterable<String> getUrls_votes(Document sessionDayPage) {
-		return FluentIterable.from(sessionDayPage.select("a[href*=/ns_golos?], a[href*=/ns_arh_golos?]")).transform(EXTRACT_HREF);
+	public static Stream<String> getUrls_votes(Document sessionDayPage) {
+		return StreamSupport.stream(sessionDayPage.select("a[href*=/ns_golos?], a[href*=/ns_arh_golos?]").spliterator(), false).map(EXTRACT_HREF);
 		// .transform(FN_PREPEND_BASEURL);
 	}
 
-	public static FluentIterable<String> getUrls_writtenRegs(Document sessionDayPage) {
-		return FluentIterable.from(sessionDayPage.select("a[href*=/ns_reg_write?], a[href*=/ns_arh_reg_write?]")).transform(EXTRACT_HREF);
+	public static Stream<String> getUrls_writtenRegs(Document sessionDayPage) {
+		return StreamSupport.stream(sessionDayPage.select("a[href*=/ns_reg_write?], a[href*=/ns_arh_reg_write?]").spliterator(), false).map(EXTRACT_HREF);
 	}
 
-	public static FluentIterable<String> getUrls_eRegs(Document sessionDayPage) {
-		return FluentIterable.from(sessionDayPage.select("a[href*=/ns_reg?], a[href*=/ns_arh_reg?]")).transform(EXTRACT_HREF);
+	public static Stream<String> getUrls_eRegs(Document sessionDayPage) {
+		return StreamSupport.stream(sessionDayPage.select("a[href*=/ns_reg?], a[href*=/ns_arh_reg?]").spliterator(), false).map(EXTRACT_HREF);
 	}
 
-	public static FluentIterable<String> getUrls_sessionDayUrls(Document sessionDetailsPage) {
-		return FluentIterable.from(sessionDetailsPage.select("table li a")).transform(EXTRACT_HREF);
+	public static Stream<String> getUrls_sessionDayUrls(Document sessionDetailsPage) {
+		return StreamSupport.stream(sessionDetailsPage.select("table li a").spliterator(), false).map(EXTRACT_HREF);
 	}
 
 	public static Map<String, Integer> getUrls_sessionDetailsPages(Document sessionListPage) {
-		return FluentIterable.from(sessionListPage.select("ul.m_ses li")).transform(EXTRACT_ON_CLICK).transform(EXTRACT_SPLINTER_APOSTROPHE_1)
-				.transform(FN_PREPEND_BASEURL).toMap(Functions.compose(FN_PARSE_INT, EXTRACT_URLPARAM_nom_s));
+		return StreamSupport.stream(sessionListPage.select("ul.m_ses li").spliterator(), false).map(EXTRACT_ON_CLICK).map(EXTRACT_SPLINTER_APOSTROPHE_1)
+				.map(FN_PREPEND_BASEURL).collect(Collectors.toMap(EXTRACT_URLPARAM_nom_s, FN_PARSE_INT));
 	}
 
 	public static String getUrl_lawprojectsList(int assemblyNum) {
 		return RADA_BASE_URL + "/pls/zweb2/webproc2_5_1_J?ses=" + (10001 + assemblyNum) + "&num_s=2&num=&date1=&date2=&name_zp=&out_type=&id=&page=1&zp_cnt=-1";
 	}
 
-	public static FluentIterable<String> getUrls_lawprojects(Document lawprojectsListPage) {
-		return FluentIterable.from(lawprojectsListPage.select(".information_block table a")).transform(EXTRACT_HREF);
+	public static Stream<String> getUrls_lawprojects(Document lawprojectsListPage) {
+		return StreamSupport.stream(lawprojectsListPage.select(".information_block table a").spliterator(), false).map(EXTRACT_HREF);
 	}
 
 	static CachingJsoup jSoup;
 	static volatile String msg;
 
 	public static void main(String args[]) throws Exception {
-		jSoup = new CachingJsoup(new ZipFSCache(new File(new File(System.getProperty("user.home", "/")), "radadata_cache.zip").getAbsolutePath()),
+
+		jSoup = new CachingJsoup(new ZipFSCache(new File(new File(System.getProperty("user.home", "/")), "radadata_cache.zip").getAbsolutePath()), null,
 				new Predicate<String>() {
-					@Override
-					public boolean apply(String url) {
-						// System.out.println("Cache hit: " + url);
-						return false;
-					}
-				}, new Predicate<String>() {
 					private int flushTime = 1000;
 
 					@Override
-					public boolean apply(String url) {
+					public boolean test(String url) {
 						if (msg != null) {
 							System.out.println(msg);
 							msg = null;
@@ -186,16 +184,14 @@ public class RadaContentHelper {
 					}
 				});
 
-		final ExtractAttr extractSrc = new ExtractAttr("src");
 		for (int i = 7; i > 3; i--) {
-			FluentIterable.from(jSoup.get(RadaContentHelper.getUrl_deputeesListPage(i)).select(".search-filter-results li"))
-					.transform(new Function<Element, Element>() {
-
+			StreamSupport.stream(jSoup.get(RadaContentHelper.getUrl_deputeesListPage(i)).select(".search-filter-results li").spliterator(), false)
+					.map(new Function<Element, Element>() {
 						@Override
 						public Element apply(Element elem) {
 							try {
-								FluentIterable.from(jSoup.get(EXTRACT_HREF.apply(elem.select(".title a").first())).select(".information_block_ins .topTitle a"))
-										.transform(EXTRACT_HREF).transform(new Function<String, String>() {
+								StreamSupport.stream(jSoup.get(EXTRACT_HREF.apply(elem.select(".title a").first())).select(".information_block_ins .topTitle a")
+										.spliterator(), false).map(EXTRACT_HREF).map(new Function<String, String>() {
 											@Override
 											public String apply(String url) {
 												try {
@@ -205,18 +201,18 @@ public class RadaContentHelper {
 												}
 												return "";
 											}
-										}).toList();
-								jSoup.get(extractSrc.apply(elem.select(".thumbnail img").first()));
+										}).collect(Collectors.toList());
+								// jSoup.get(EXTRACT_SRC.apply(elem.select(".thumbnail img").first()));
 							} catch (Exception e) {
 								e.printStackTrace();
 							}
 							return elem;
 						}
-					}).toList();
+					}).collect(Collectors.toList());
 			jSoup.flushCache();
 		}
 		for (int i = 7; i > 6; i--) {
-			RadaContentHelper.getUrls_lawprojects(jSoup.get(RadaContentHelper.getUrl_lawprojectsList(i))).transform(new Function<String, String>() {
+			RadaContentHelper.getUrls_lawprojects(jSoup.get(RadaContentHelper.getUrl_lawprojectsList(i))).map(new Function<String, String>() {
 				@Override
 				public String apply(String url) {
 					try {
@@ -226,7 +222,7 @@ public class RadaContentHelper {
 					}
 					return "";
 				}
-			}).toSet();
+			}).collect(Collectors.toSet());
 			jSoup.flushCache();
 		}
 		for (int i = 7; i >= 3;) {
@@ -245,38 +241,45 @@ public class RadaContentHelper {
 
 	protected static void fetchVotes(int i, final CachingJsoup jSoup) throws Exception {
 		final int skl = i;
-		FluentIterable.from(RadaContentHelper.getUrls_sessionDetailsPages(jSoup.get(RadaContentHelper.getUrl_sessionListPage(i))).entrySet())
-				.transform(new Function<Map.Entry<String, Integer>, List<String>>() {
+		StreamSupport
+				.stream(RadaContentHelper.getUrls_sessionDetailsPages(jSoup.get(RadaContentHelper.getUrl_sessionListPage(i))).entrySet().spliterator(), false)
+				.map(new Function<Map.Entry<String, Integer>, List<String>>() {
 					@Override
 					public List<String> apply(Entry<String, Integer> entry) {
 						final String sessionInfo = String.format("Скликання %s, сесія %s:", skl, EXTRACT_URLPARAM_nom_s.apply(entry.getKey()));
-						List<String> result = RadaContentHelper.getUrls_sessionDayUrls(jSoup.getSafe(entry.getKey())).transform(new Function<String, String>() {
+
+						Function<String, String> fn = new Function<String, String>() {
 							@Override
 							public String apply(String sessionDayUrl) {
-								FluentIterable<String> votesLinks = RadaContentHelper.getUrls_votes(jSoup.getSafe(sessionDayUrl));
+								Stream<String> votesLinks = RadaContentHelper.getUrls_votes(jSoup.getSafe(sessionDayUrl));
 								final String sesDayInfo = sessionInfo + " - " + sessionDayUrl.split("\\?")[1];
-								int vls = votesLinks.size();
-								for (int i = 0; i < vls; i++) {
-									String url = votesLinks.get(i);
-									try {
-										msg = sesDayInfo + ": " + i + "/" + vls;
-										jSoup.httpGet(url, true, true);
-									} catch (HttpStatusException e) {
-										if (e.getStatusCode() != 404) {
+								final long vls = votesLinks.count();
+								final AtomicInteger i = new AtomicInteger(0);
+								votesLinks.forEach(new Consumer<String>() {
+									@Override
+									public void accept(String url) {
+										try {
+											msg = sesDayInfo + ": " + i.incrementAndGet() + "/" + vls;
+											jSoup.httpGet(url, true, true);
+										} catch (HttpStatusException e) {
+											if (e.getStatusCode() != 404) {
+												throw new RuntimeException(e);
+											} else {
+												System.err.println("!!! 404 !!! " + url);
+											}
+										} catch (Exception e) {
 											throw new RuntimeException(e);
-										} else {
-											System.err.println("!!! 404 !!! " + url);
 										}
-									} catch (Exception e) {
-										throw new RuntimeException(e);
 									}
-								}
+								});
+
 								return "";
 							}
-						}).toList();
-						return result;
+						};
+
+						return RadaContentHelper.getUrls_sessionDayUrls(jSoup.getSafe(entry.getKey())).map(fn).collect(Collectors.toList());
 					}
-				}).toList();
+				}).collect(Collectors.toList());
 	}
 
 	public static void sleep() {
